<resources>
    <string name="app_name">Edwin</string>
    <string name="tutorial_yes">Oui</string>
    <string name="tutorial_no">Non</string>
    <string name="title_activity_menu_activityy">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="description_image">Ceci est une image.</string>

    <!-- A Propos -->

    <string name="a_propos_title">Informations</string>
    <string name="a_propos_origin_project">Origine du projet</string>
    <string name="a_propos_origin_project_text">Ce projet est réalisé dans le cadre d\'un projet de fin d\'études au sein de l\'ESEO, Grande Ecole d\'Ingénieur Généraliste.</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>
    <string name="a_propos_contact">Réalisation</string>
    <string name="a_propos_contact_text">Cette application a été développée et réalisée par l\'ensemble du groupe du projet, composé de Jules Jaunay, Nassim Messaoudi et Dimitri Jarneau.</string>
    <string name="a_propos_condition_use">Conditions d\'utilisation</string>
    <string name="a_propos_condition_detail">L\'utilisation de cette application vaut acceptation des conditions mentionnées ci-après. \n</string>
    <string name="a_propos_condition_photo">Les logos et emblèmes du projet Edwin ont été créés dans un but scolaire.
        Il convient donc de respecter ces logos et emblèmes.\n</string>
    <string name="a_propos_condition_droits_auteurs">En application du Code francais de la propriété intellectuelle et plus généralement
        des traités et accords internationaux comportant des dispositions relatives à la protection des droits d\'auteurs, il est
        interdit pour un usage autre que privé ou pédagogique de reproduire, vendre, diffuser, modifier, publier intégralement ou partiellement
        , sous quelque forme que ce soit les données, la présentation ou l\'organisation de l\'application ainsi que les oeuvres protégées par
        les droits d\'auteurs qui y figurent, sans autorisation écrite particulière et préalable, dont la demande doit être adressée à Jules Jaunay / Nassim
        Messaoudi / Dimitri Jarneau. \n</string>
    <string name="a_propos_condition_donnees_perso">Lors de l\'utilisation de l\'application, aucune collecte de données personnelles
        n\'est réalisée. \n</string>
    <string name="a_propos_condition_decharge_utilisation">Cette application vous donne une information sur des opérations chirugicales, elle n\'a
       pas vocation à se substituer à un médecin ou à poser un diagnostic médical. Elle ne dispense pas du suivi d\'une consultation auprès
        de personnes compétentes. Edwin ne peut être tenue responsable directement ou indirectement d\'une mauvaise compréhension des informations
        contenues au sein de l\'application.
        De même, elle n\'est en aucun cas responsable de l\'infection par des virus ou de tout problème informatique ayant des effects destructeurs.
        </string>
    <string name="a_propos_dev">Développé par Jules Jaunay, Nassim Messaoudi et Dimitri Jarneau. \n \n</string>

    <!-- Accueil -->

    <string name="accueil_presentation"> Edwin,\n l\'application chirurgicale qui vous accompagne
        en chirurgie thoracique.</string>
    <string name="button_vos_fiches"> VOS FICHES </string>
    <string name="button_besoin_aide"> BESOIN D\'AIDE ? </string>
    <string name="button_plus_info"> PLUS D\'INFO </string>
    <string name="accueil_info"> Edwin - PFE 2018/ 2019 </string>

    <!-- Glossaire -->

    <string name="titre_def"> Définition :</string>
    <string name="glossaire_source"> Définition issue de Larousse.</string>

    <!-- Glossaire details fragment -->

    <string name="nom_item">Nom_item</string>
    <string name="d_finition_du_mot">Définition du mot</string>
    <string name="voir_la_fiche_correspondante">Voir la fiche correspondante</string>

    <!-- Fiche Detail Activity -->

    <string name="pneumothorax_titre"> Pneumothorax</string>
    <string name="service_titre"> Service de chrirurgie thoracique </string>
    <string name="intro_operation"> L’intervention qui vous est proposée s’appelle la symphyse pleurale </string>
    <string name="rappel_anatomique">Rappel anatomique</string>
    <string name="la_maladie">La maladie</string>
    <string name="pourquoiOperer">Pourquoi vous faire opérer - alternatives ?</string>
    <string name="principes_de_l_intervention">Principes de l\'intervention</string>
    <string name="techniques_op_ratoires">Techniques opératoires</string>
    <string name="suites_habituelles">Suites habituelles</string>
    <string name="risques_li_s">Risques liés</string>
    <string name="suivi">Suivi</string>
    <string name="fiche_schema">Schéma</string>

    <!-- Parametres Details activity -->

    <string name="informations_de_connexion_la_bdd">Informations de connexion à la BDD</string>
    <string name="url_de_la_base_de_donn_es">URL de la base de données :</string>
    <string name="driver_de_bdd">Driver de BDD :</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur :</string>
    <string name="mot_de_passe_de_connexion">Mot de passe de connexion :</string>

    <!-- Parametres activity -->

    <string name="informations">Informations :</string>
    <string name="version_de_l_application">Version de l\'application</string>
    <string name="id_du_t_l_phone">ID du téléphone</string>
    <string name="contenu">Contenu :</string>
    <string name="repondre_qcm">Répondre au QCM :</string>
    <string name="lienQCM">Lien vers le QCM retour d\'expérience utilisateur</string>
    <string name="evaluer_l_application">Evaluer l\'application</string>
    <string name="ouvrir_google_play">Ouvrir Google Play</string>
    <string name="contacter_les_d_veloppeurs">Contacter les développeurs</string>
    <string name="envoyer_aux_d_veloppeurs_un_email_contenant_les_informations_de_l_appareil">Envoyer aux développeurs un email contenant les informations de l\'appareil</string>
    <string name="partager">Partager</string>
    <string name="partager_l_application">Partager l\'application</string>

    <!-- Quiz -->

    <string name="aucun_r_sultat">Aucun résultat.</string>
    <string name="_1_seule_r_ponse_correcte">1 seule réponse correcte</string>
    <string name="votre_score">Votre score</string>
    <string name="_3_5">3/5</string>
    <string name="recommencer_un_quiz">Recommencer un quiz</string>
    <string name="menu">Accueil</string>
    <string name="titre">Titre</string>
    <string name="question_numero">Question_numero</string>
    <string name="nomquizz">nomQuizz</string>
    <string name="radio_btn_1">Radio btn 1</string>
    <string name="radio_btn_2">Radio btn 2</string>
    <string name="radio_btn_3">Radio btn 3</string>
    <string name="prochaine_question">Prochaine question</string>

    <!-- Aide -->

    <string name="chercher_fiche"> Comment trouver votre fiche opératoire ? </string>
    <string name="enregistrer_fiche"> Comment enregistrer dans vos "favoris" votre fiche opératoire ? </string>
    <string name="chercher_mot"> Comment chercher un terme médical dans le glossaire ? </string>
    <string name="nous_contacter"> Comment nous contacter ? </string>

</resources>
