<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/card_margin">

                <!--Premiere fenetre pour afficher info -->

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGreyColor">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/logo_idee_50" />

                    <TextView
                        android:id="@+id/author"
                        style="@style/InformationThemeTextTitleView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_origin_project" />

                    <TextView
                        android:id="@+id/quote"
                        style="@style/InformationThemeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_origin_project_text" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin">

                <!--Seconde fenetre pour afficher info-->

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGreyColor">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/logo_realisation_50" />

                    <TextView
                        style="@style/InformationThemeTextTitleView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_contact" />

                    <TextView
                        style="@style/InformationThemeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_contact_text" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin">

                <!--Troisieme fenetre pour afficher info -->

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGreyColor">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/logo_condition_50" />

                    <TextView
                        android:id="@+id/title_text_conditions"
                        style="@style/InformationThemeTextTitleView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_condition_use" />

                    <TextView
                        android:id="@+id/content_text_detail"
                        style="@style/InformationThemeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_condition_detail" />

                    <TextView
                        android:id="@+id/content_text_photo"
                        style="@style/InformationThemeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_condition_photo" />

                    <TextView
                        android:id="@+id/content_text_droits"
                        style="@style/InformationThemeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_condition_droits_auteurs" />

                    <TextView
                        android:id="@+id/content_text_donnes_perso"
                        style="@style/InformationThemeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_condition_donnees_perso" />

                    <TextView
                        android:id="@+id/content_text_decharge_utilisation"
                        style="@style/InformationThemeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_propos_condition_decharge_utilisation" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/LightGreyColor"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="false"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_edwyn" />

                <TextView
                    android:id="@+id/dev_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/a_propos_dev"
                    style="@style/InformationThemeTextView" />

                <!-- Content to hide / show-->
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>